--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <tr>
             <td class="branco" align="center">|&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="index.html">HOME</a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;|</td>
             <td class="branco" align="right">|&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="docs/CONTATO.html">CONTATO</a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;|</td>
-            <td class="branco" align="center"><a href="index.html"><img src="Images/Logo.jpg" alt="Slaugther to Prevail" width="300"></a></td>
+            <td class="branco" align="center"><a href="index.html"><img src="BasicWebSite/Images/Logo.jpg" alt="Slaugther to Prevail" width="300"></a></td>
             <td class="branco" align="left">|&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="docs/NOVIDADES.html">NOVIDADES</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;|</td>
             <td class="branco"  align="center">|&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="MEMBROS.html">MEMBROS</a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;|</td>
 
