--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
         
         <tr>
             <td class="branco" align="center">|&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="index.html">HOME</a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;|</td>
-            <td class="branco" align="right">|&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="docs/CONTATO.html">CONTATO</a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;|</td>
-            <td class="branco" align="center"><a href="index.html"><img src="BasicWebSite/Images/Logo.jpg" alt="Slaugther to Prevail" width="300"></a></td>
-            <td class="branco" align="left">|&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="docs/NOVIDADES.html">NOVIDADES</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;|</td>
-            <td class="branco"  align="center">|&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="MEMBROS.html">MEMBROS</a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;|</td>
+            <td class="branco" align="right">|&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="JWchester/BasicWebSite/docs/CONTATO.html">CONTATO</a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;|</td>
+            <td class="branco" align="center"><a href="index.html"><img src="JWchester/BasicWebSite/Images/Logo.jpg" alt="Slaugther to Prevail" width="300"></a></td>
+            <td class="branco" align="left">|&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="JWchester/BasicWebSite/docs/NOVIDADES.html">NOVIDADES</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;|</td>
+            <td class="branco"  align="center">|&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="JWchester/BasicWebSite/docs/MEMBROS.html">MEMBROS</a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;|</td>
 
         </tr>
 
