--- a/MEMBROS.html
+++ b/MEMBROS.html
@@ -60,7 +60,7 @@
 
         <tr><br>
             <td align="left">
-                <img src="/10 - Site/Images/image-removebg-preview (1).png" width="300">
+                <img src="Images/image-removebg-preview (1).png" width="300">
             </td>
             <td align="center">
                 <h1 style="color: white">JACK SIMMONS</h1>
